--- a/u2/estilo.css
+++ b/u2/estilo.css
@@ -25,6 +25,11 @@ body{
     padding: 15px;
 
 }
+.contenedor2 {
+    width: 100%;
+    padding: 15px;
+
+}
 .formulario{
     background: #fff;
     margin-top: 150px;
@@ -37,15 +42,36 @@ h1 {
 
 }
 input[type ="email"],
-input[type ="password"]{
-
+input[type ="password"],
+{
     font-size: 28px;
     width: 82%;
     padding: 18PX;
     border: none;
 }
+input[type ="text"],
+{
+    font-size: 28px;
+    width: 82%;
+    padding: 11PX;
+    border: none;
+    
+}
+input[type ="number"]{
+    font-size: 12px;
+    width: 50%;
+    padding: 7PX;
+    border: 1px solid black;
+
+}
+
 .input-contenedor{
 margin-bottom: 15px;
+border: 1px solid black;
+
+}
+.input-contenedor2{
+margin-bottom: 1px;
 border: 1px solid black;
 
 }
@@ -90,6 +116,15 @@ p{
     cursor: pointer;
 
 }
+
+
+.TarjetasCuadro{
+     background: #fff;
+    margin-top: 150px;
+    padding: 1px;
+
+}
+
 @media(min-width: 768px){
     .formulario{
         margin: auto;
@@ -103,6 +138,13 @@ p{
         margin-top: 50px;
 
     }
+    .TarjetasCuadro{
+        margin: auto;
+        width: 500px;
+        margin-top: 110px;
+        border-radius: 5%;
+    }
 
     }
+
 }
