--- a/PruebaAplicacion/templates/comunes/menu.html
+++ b/PruebaAplicacion/templates/comunes/menu.html
@@ -12,11 +12,13 @@
       <ul class="nav navbar-nav">
         <li><a href="/categorias">Categorías</a></li>
         <li><a href="/carrito">Carrito</a></li>
-        <li><a href="#">Page 3</a></li>
+        <li><a href="/verperfil">Perfil</a></li>
+        <li><a href="/pedidosclt">Pedidos</a></li>
+        <li><a href="/vendedorpedido/pedidosad">Administrar Pedidos</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/registrarCuenta"><span class="glyphicon glyphicon-user"></span> Crear cuenta</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Iniciar Sesión</a></li>
+        <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Iniciar Sesión</a></li>
       </ul>
     </div>
   </div>
