--- a/PruebaAplicacion/templates/pedidosclt/pedidocl.html
+++ b/PruebaAplicacion/templates/pedidosclt/pedidocl.html
@@ -1,5 +1,8 @@
 {% extends 'comunes/base.html' %}
-
+{% block navbar %}
+	{{super()}}
+	{% include 'comunes/menu.html' %}
+{% endblock %}
 {% block contenido %}
     <h1>PEDIDOS REALIZADOS</h1>
     <div class="table">
