--- a/PruebaAplicacion/static/css/estilo.css
+++ b/PruebaAplicacion/static/css/estilo.css
@@ -65,3 +65,143 @@ p[class="inicio"]{
 #tablaProductos{
 	max-width: 80%;
 }
+*{
+    box-sizing: border-box;
+}
+.fotoPerfil{
+    width: 25%;
+    padding: 1px;
+    margin-top: 11px;
+    margin: auto;
+    margin-left:180px;
+
+}
+
+.contenedor {
+    width: 100%;
+    padding: 15px;
+
+}
+.contenedor2 {
+    width: 100%;
+    padding: 15px;
+
+}
+.formulario{
+    background: #fff;
+    margin-top: 150px;
+    padding: 3px;
+}
+
+h1 {
+    text-align: center;
+    font-size: 40px;
+
+}
+input[type ="email"],
+input[type ="password"],
+{
+    font-size: 28px;
+    width: 82%;
+    padding: 18PX;
+    border: none;
+}
+input[type ="text"],
+{
+    font-size: 28px;
+    width: 82%;
+    padding: 11PX;
+    border: none;
+
+}
+input[type ="number"]{
+    font-size: 12px;
+    width: 50%;
+    padding: 7PX;
+    border: 1px solid black;
+
+}
+
+.input-contenedor{
+margin-bottom: 15px;
+border: 1px solid black;
+
+}
+.input-contenedor2{
+margin-bottom: 1px;
+border: 1px solid black;
+
+}
+.icon{
+    min-width: 58px;
+    text-align: center;
+    color: black;
+}
+.button{
+    border: none;
+    width: 100%;
+    color: black;
+    font-size: 28px;
+    background: #2491AB;
+    padding: 15px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+
+}.button:hover{
+    background: cadetblue;
+}
+p{
+    text-align: center;
+}
+.link{
+    text-decoration: none;
+    color: #2491AB;
+    font-weight: 680;
+}
+.link:hover{
+    color: cadetblue;
+
+}
+.Revelador{
+    border: none;
+    width: 30%;
+    color: black;
+    font-size: 16px;
+    background: #DFC8EE;
+    padding: 3px 4px;
+    border-radius: 10px;
+    cursor: pointer;
+
+}
+
+
+.TarjetasCuadro{
+     background: #fff;
+    margin-top: 150px;
+    padding: 1px;
+
+}
+
+@media(min-width: 768px){
+    .formulario{
+        margin: auto;
+        width: 500px;
+        margin-top: 110px;
+        border-radius: 5%;
+    }
+    .lista{
+        margin: auto;
+        width: 500px;
+        margin-top: 50px;
+
+    }
+    .TarjetasCuadro{
+        margin: auto;
+        width: 500px;
+        margin-top: 110px;
+        border-radius: 5%;
+    }
+
+    }
+
+}
