--- a/PruebaAplicacion/templates/usuarios/carrito.html
+++ b/PruebaAplicacion/templates/usuarios/carrito.html
@@ -29,7 +29,7 @@
             <td>Pendiente</td>
         </tr>
     </table>
-    <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#myModal">Agregar al carrito</button>
+    <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#myModal">Pagar</button>
 
     <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
