--- a/PruebaAplicacion/templates/vendedorpedido/pedidosvendedoradministrativos.html
+++ b/PruebaAplicacion/templates/vendedorpedido/pedidosvendedoradministrativos.html
@@ -1,5 +1,8 @@
 {% extends 'comunes/base.html' %}
-
+{% block navbar %}
+	{{super()}}
+	{% include 'comunes/menu.html' %}
+{% endblock %}
 {% block contenido %}
     <title>Pedidos Relizados</title>
     <h1>DETALLES DE PEDIDO</h1>
