Ultima ahora si
22: 21
Co-Authored-By: carlosflores7 <83609971+carlosflores7@users.noreply.github.com>
Co-Authored-By: BrunoAMH <86796020+BrunoAMH@users.noreply.github.com>

--- a/PruebaAplicacion/templates/usuarios/VerPerfil.html
+++ b/PruebaAplicacion/templates/usuarios/VerPerfil.html
@@ -1,5 +1,6 @@
 {% extends 'Comunes/base.html' %}
 {% block navbar %}
+{{super()}}
 {% include 'Comunes/Menu.html' %}
 {% endblock %}
 {% block contenido %}
