--- a/PruebaAplicacion/templates/usuarios/VerPerfil.html
+++ b/PruebaAplicacion/templates/usuarios/VerPerfil.html
@@ -16,8 +16,9 @@
         <li class="list-group-item">Email:123123123asdawdw@sasd</li>
          <li class="list-group-item">tipo (Cliente/Empleado)</li>
           <li class="list-group-item">Estatus:Activo</li>
-        <a href="/tarjetas" class="list-group-item">Tarjeta Registrada</a>
-
+        <a class="list-group-item" href="/tarjetas/registrada">Tarjeta Registrada</a>
+        <a class="list-group-item" href="/verperfil/modificar" >Modificar datos</a>
+        <a href="/tarjetas" class="list-group-item">Modificar Tarjeta</a>
     </ul>
 
 </form>
