--- a/PruebaAplicacion/templates/pedidosclt/pedidopedircl.html
+++ b/PruebaAplicacion/templates/pedidosclt/pedidopedircl.html
@@ -35,6 +35,7 @@
 
 </td>
     </table>
-        <a class="btn btn-primary mb-3" href="/pedidosclt/pedidosdetalle">Confirmar Pedido</a>
+        <a class="btn btn-primary mb-3" href="/pedidosclt">Confirmar Pedido</a>
+        <a class="btn btn-danger mb-3" href="/carrito">Cancelar</a>
     </div>
 {% endblock %}
