--- a/PruebaAplicacion/templates/vendedorpedido/pedidosadministrados.html
+++ b/PruebaAplicacion/templates/vendedorpedido/pedidosadministrados.html
@@ -18,6 +18,7 @@
             <th>TOTAL A PAGAR</th>
             <th>TOTAL DE UNIDADES</th>
             <th>ESTATUS</th>
+            <th>DETALLES DE PEDIDO ADMINISTRADOS</th>
         </thead>
         <tr>
             <td>87128712</td>
@@ -29,21 +30,21 @@
             <td>$2200</td>
             <td>4 unidades</td>
             <th>ENTREGADO</th>
-
+ <TH><a class="btn btn-primary mb-3" href="/vendedorpedido/pedidovendidadvarios" >Detalles</a></TH>
         </tr>
         <tr>
             <td>74821174</td>
             <td>Pago referenciado (Transferencia SPEI, Depósito en efectivo/cheque)</td>
             <td>04/07/2021</td>
             <td>05/07/2021</td>
-            <td><input type="date" id="birthday" name="birthday"><BR>
-                <a class="btn btn-primary btn sm" href="#" >Agregar fecha</a></td>
+            <td>05/31/2021</td>
             <td><input type="date"name="birthday"><BR>
                 <a class="btn btn-primary btn sm" href="#" >Agregar fecha</a></td>
 
             <td>$3000</td>
             <td>4 unidades</td>
             <th>ENVIADO</th>
+             <TH><a class="btn btn-primary mb-3" href="/vendedorpedido/pedidovendidaduno" >Detalles</a></TH>
         </tr>
         <tr>
            <td>82473474</td>
@@ -51,14 +52,14 @@
             <td>07/07/2021</td>
             <td><input type="date"name="birthday"><BR>
                 <a class="btn btn-primary btn sm" href="#" >Agregar fecha</a></td>
-            <td><input type="date"name="birthday"><BR>
-                <a class="btn btn-primary btn sm" href="#" >Agregar fecha</a></td>
+           <td>07/30/2021</td>
             <td><input type="date"name="birthday"><BR>
                 <a class="btn btn-primary btn sm" href="#" >Agregar fecha</a></td>
 
             <td>$3000</td>
             <td>4 unidades</td>
             <th>PENDIENTE</th>
+             <TH><a class="btn btn-primary mb-3" href="/vendedorpedido/pedidovendidaduno" >Detalles</a></TH>
         </tr>
         <tr>
            <td>15412469</td>
@@ -72,6 +73,7 @@
             <td>$15000</td>
             <td>1 unidades</td>
             <th>ENTREGADO</th>
+             <TH><a class="btn btn-primary mb-3" href="/vendedorpedido/pedidovendidaduno" >Detalles</a></TH>
         </tr>
         <tr>
            <td>7181751</td>
@@ -79,16 +81,15 @@
             <td>07/07/2021</td>
             <td><input type="date"name="birthday"><BR>
                 <a class="btn btn-primary btn sm" href="#" >Agregar fecha</a></td>
+            <td>07/30/2021</td>
             <td><input type="date"name="birthday"><BR>
                 <a class="btn btn-primary btn sm" href="#" >Agregar fecha</a></td>
-            <td><input type="date"name="birthday"><BR>
-                <a class="btn btn-primary btn sm" href="#" >Agregar fecha</a></td>
-
             <td>$2000</td>
             <td>4 unidades</td>
             <th>PENDIENTE</th>
+             <TH><a class="btn btn-primary mb-3" href="/vendedorpedido/pedidovendidaduno" >Detalles</a></TH>
+
         </tr>
     </table>
-          <a class="btn btn-primary mb-3" href="/vendedorpedido/pedidovendidosad" >Detalles de pedidos administrados</a>
-    </div>
+          </div>
 {% endblock %}
