--- a/PruebaAplicacion/templates/pedidosclt/pedidocl.html
+++ b/PruebaAplicacion/templates/pedidosclt/pedidocl.html
@@ -16,6 +16,7 @@
             <th>TOTAL A PAGAR</th>
             <th>TOTAL DE UNIDADES</th>
             <th>ESTATUS</th>
+            <th>DETALLES PEDIDO</th>
         </thead>
         <tr>
             <td>87128712</td>
@@ -26,26 +27,31 @@
             <td>$2200</td>
             <td>4 unidades</td>
             <th>ENTREGADO</th>
+            <TH><a class="btn btn-primary mb-3" href="/pedidosclt/pedidosclvarios" >Detalles de pedidos</a></TH>
         </tr>
         <tr>
             <td>74821174</td>
             <td>Pago referenciado (Transferencia SPEI, Depósito en efectivo/cheque)</td>
             <td>04/07/2021</td>
             <td>05/07/2021</td>
-            <td>09/07/2021</td>
+           <td><input type="date" id="birthday" name="birthday"><BR>
+                <a class="btn btn-primary btn sm" href="#" >Agregar fecha</a></td>
             <td>$3000</td>
             <td>4 unidades</td>
             <th>ENVIADO</th>
+            <TH><a class="btn btn-primary mb-3" href="/pedidosclt/pedidoscluno" >Detalles de pedidos</a></TH>
         </tr>
         <tr>
            <td>82473474</td>
             <td>Pago referenciado (Transferencia SPEI, Depósito en efectivo/cheque)</td>
             <td>07/07/2021</td>
             <td>08/07/2021</td>
-            <td>31/07/2021</td>
+            <td><input type="date"  name="birthday"><BR>
+                <a class="btn btn-primary btn sm" href="#" >Agregar fecha</a></td>
             <td>$3000</td>
             <td>4 unidades</td>
             <th>PENDIENTE</th>
+            <TH><a class="btn btn-primary mb-3" href="/pedidosclt/pedidoscluno" >Detalles de pedidos</a></TH>
         </tr>
         <tr>
            <td>15412469</td>
@@ -56,18 +62,20 @@
             <td>$15000</td>
             <td>1 unidades</td>
             <th>ENTREGADO</th>
+            <TH><a class="btn btn-primary mb-3" href="/pedidosclt/pedidoscluno" >Detalles de pedidos</a></TH>
         </tr>
         <tr>
            <td>7181751</td>
             <td>Pago referenciado (Transferencia SPEI, Depósito en efectivo/cheque)</td>
             <td>07/07/2021</td>
             <td>08/07/2021</td>
-            <td>31/07/2021</td>
+           <td><input type="date"  name="birthday"><BR>
+                <a class="btn btn-primary btn sm" href="#" >Agregar fecha</a></td>
             <td>$2000</td>
             <td>4 unidades</td>
             <th>PENDIENTE</th>
+            <TH><a class="btn btn-primary mb-3" href="/pedidosclt/pedidoscluno" >Detalles de pedidos</a></TH>
         </tr>
     </table>
-        <a class="btn btn-primary mb-3" href="/pedidosclt/pedidosdetalle" >Detalles de pedidos</a>
     </div>
 {% endblock %}
