--- a/Shopitesz_prueba/templates/categorias/consultaGeneral.html
+++ b/Shopitesz_prueba/templates/categorias/consultaGeneral.html
@@ -7,27 +7,37 @@
 {{super()}}
 <div>
     <h1 class="bg-primary text-center">Listado de Categorias</h1>
+     {% if current_user.is_authenticated and current_user.is_admin() %}
     <a href="/Categorias/nueva">
          <span class="glyphicon glyphicon-plus-sign"></span>
         Agregar Categoria
     </a>
+      {% endif %}
     <table class="table table-bordered table-hover justify-content-center" id="tablaCategorias">
         <th>ID</th>
         <th>NOMBRE</th>
+         {% if current_user.is_authenticated and current_user.is_admin() %}
         <th>ESTATUS</th>
+        {% endif %}
         <th>IMAGEN</th>
+        {% if current_user.is_authenticated and current_user.is_admin() %}
         <th>Ver</th>
+         {% endif %}
         {% for cat in categorias %}
             <tr>
                 <td>{{cat.idCategoria}}</td>
                 <td>{{cat.nombre}}</td>
-                <td>{{cat.estatus}}</td>
+                {% if current_user.is_authenticated and current_user.is_admin() %}
+                     <td>{{cat.estatus}}</td>
+                {% endif %}
                 <td><img src="/Categorias/consultarImagen/{{cat.idCategoria}}" width="100px" height="80px"></td>
+                {% if current_user.is_authenticated and current_user.is_admin() %}
                 <td>
                     <a href="/Categorias/{{cat.idCategoria}}">
                         <span class="glyphicon glyphicon-eye-open"></span>
                     </a>
                 </td>
+                {% endif %}
             </tr>
         {% endfor %}
     </table>
