--- a/Shopitesz_prueba/templates/comunes/menu.html
+++ b/Shopitesz_prueba/templates/comunes/menu.html
@@ -18,15 +18,17 @@
           <li><a href="/productos">PRODUCTOS</a></li>
         </ul>
       </li>
+        {% if current_user.is_authenticated and current_user.is_admin() %}
       <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">USUARIOS
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="/registrarCuenta">CLIENTES</a></li>
           <li><a href=""> </a></li>
-          <li><a href="#">VENDEDORES</a></li>
         </ul>
       </li>
+        {% endif %}
+        {% if current_user.is_authenticated %}
      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">PEDIDOS
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
@@ -34,7 +36,7 @@
           <li><a href="/pedidosclt">PEDIDOS</a></li>
           <li><a href="/pedidosclt/pedidosdetalle">DETALLES PEDIDOS</a></li>
         </ul>
-
+{% endif %}
       <ul class="nav navbar-nav navbar-right">
             {% if not current_user.is_authenticated %}
             <li><a href="/Usuarios/iniciarSesion"><span class="glyphicon glyphicon-log-in"></span> Iniciar Sesion</a></li>
