--- a/Shopitesz_prueba/templates/productos/consultaGeneral.html
+++ b/Shopitesz_prueba/templates/productos/consultaGeneral.html
@@ -12,6 +12,7 @@
             <th>DESCRIPCION</th>
             <th>CATEGORIA</th>
             <th>PRECIO</th>
+            <th>IMAGEN</th>
             <th>STOCK</th>
         </thead>
         {% for prod in productos %}
@@ -20,6 +21,7 @@
                 <td>{{prod.descripcion}}</td>
                 <td>{{prod.categoria.nombre}}</td>
                 <td>{{prod.precioVenta}}</td>
+                <td><img src="/productos/consultarImagen/{{prod.idProducto}}" width="100px" height="80px"></td>
                 <td>{{prod.existencia}}</td>
             </tr>
         {% endfor %}
