--- a/Shopitesz_prueba/templates/productos/consultaGeneral.html
+++ b/Shopitesz_prueba/templates/productos/consultaGeneral.html
@@ -21,6 +21,9 @@
             <th>IMAGEN</th>
             <th>STOCK</th>
             <th>ESTATUS</th>
+            {% if current_user.is_authenticated and current_user.is_vendedor() %}
+            <th>Ver</th>
+            {% endif %}
         </thead>
         {% for prod in productos %}
             <tr>
@@ -31,6 +34,13 @@
                 <td><img src="/productos/consultarImagen/{{prod.idProducto}}" width="100px" height="80px"></td>
                 <td>{{prod.existencia}}</td>
                 <td>{{prod.estatus}}</td>
+                {% if current_user.is_authenticated and current_user.is_vendedor() %}
+                    <td>
+                        <a href="/productos/{{prod.idProducto}}">
+                            <span class="glyphicon glyphicon-eye-open"></span>
+                        </a>
+                    </td>
+                {% endif %}
             </tr>
         {% endfor %}
     </table>
