--- a/Shopitesz_prueba/templates/productos/consultaGeneral.html
+++ b/Shopitesz_prueba/templates/productos/consultaGeneral.html
@@ -8,7 +8,7 @@
     {% if current_user.is_authenticated and current_user.is_vendedor() %}
     <a href="/productos/nuevo" class="btn btn-success">
          <span class="glyphicon glyphicon-plus-sign"></span>
-        Agregar Categoria
+        Agregar Producto
     </a>
     {% endif %}
     <div class="table-responsive">
