--- a/Shopitesz_prueba/templates/productos/editar.html
+++ b/Shopitesz_prueba/templates/productos/editar.html
@@ -25,7 +25,7 @@
         </div>
         <div class="form-group">
             <label for="precioVenta">precio de Venta:</label>
-            <input type="number" name="precioventa"  value="{{prod.precioVenta}}" class="form-control">
+            <input type="number" name="precioVenta"  value="{{prod.precioVenta}}" class="form-control">
         </div>
         <div class="form-group">
             <label for="existencia">Existencias:</label>
@@ -36,7 +36,7 @@
             {% if prod.estatus=='Activo'%}
                 <input type="checkbox" name="estatus" value="Activo" checked>
             {% else %}
-                <input type="checkbox" name="estatus" value="Activo">
+                <input type="checkbox" name="estatus" value="Inactivo">
             {% endif %}
         </div>
         <div class="form-group">
