--- a/PruebaAplicacion/templates/productos/consultaGeneral.html
+++ b/PruebaAplicacion/templates/productos/consultaGeneral.html
@@ -1,28 +1,48 @@
 {% extends 'comunes/base.html' %}
 {% block navbar %}
-{{super()}}
-{% include 'comunes/menu.html' %}
+    {{super()}}
+    {% include 'comunes/menu.html' %}
 {% endblock %}
 {% block contenido %}
-    <h1 align="center">Productos de "@@@@@@@"</h1>
-    <center>
-        <table class="table table-bordered table-hover" id="tablaProductos">
-       <thead>
+    <h1>LISTADO DE PRODUCTOS</h1>
+    {% if current_user.is_authenticated and current_user.is_vendedor() %}
+    <a href="/productos/nuevo" class="btn btn-success">
+         <span class="glyphicon glyphicon-plus-sign"></span>
+        Agregar Producto
+    </a>
+    {% endif %}
+    <div class="table-responsive">
+    <table class="table">
+        <thead>
             <th>NOMBRE</th>
             <th>DESCRIPCION</th>
             <th>CATEGORIA</th>
             <th>PRECIO</th>
+            <th>IMAGEN</th>
             <th>STOCK</th>
-       </thead>
-            {% for prod in productos %}
+            <th>ESTATUS</th>
+            {% if current_user.is_authenticated and current_user.is_vendedor() %}
+            <th>Ver</th>
+            {% endif %}
+        </thead>
+        {% for prod in productos %}
             <tr>
                 <td>{{prod.nombre}}</td>
                 <td>{{prod.descripcion}}</td>
                 <td>{{prod.categoria.nombre}}</td>
                 <td>{{prod.precioVenta}}</td>
+                <td><img src="/productos/consultarImagen/{{prod.idProducto}}" width="100px" height="80px"></td>
                 <td>{{prod.existencia}}</td>
+                <td>{{prod.estatus}}</td>
+                {% if current_user.is_authenticated and current_user.is_vendedor() %}
+                    <td>
+                        <a href="/productos/{{prod.idProducto}}">
+                            <span class="glyphicon glyphicon-eye-open"></span>
+                        </a>
+                    </td>
+                {% endif %}
             </tr>
         {% endfor %}
     </table>
-    </center>
+    </div>
 {% endblock %}
