--- a/PruebaAplicacion/templates/usuarios/Login.html
+++ b/PruebaAplicacion/templates/usuarios/Login.html
@@ -1,28 +1,27 @@
-{% extends 'Comunes/base.html' %}
+{% extends 'comunes/base.html' %}
 {% block contenido %}
-    <script src="https://kit.fontawesome.com/2530d1feb2.js" crossorigin="anonymous"></script>
-
-    <form class="formulario" action="/" >
-
-    <h1>Iniciar Sesion</h1>
-
-     <div class="contenedor">
-
-
-
-         <div class="input-contenedor">
-         <i class="fas fa-envelope icon"></i>
-         <input type="email" name="Correo" maxlength="50" placeholder="Introduce tu email." required>
-         </div>
+    {{super()}}
+   <script src="https://kit.fontawesome.com/2530d1feb2.js" crossorigin="anonymous"></script>
+   <h1>Iniciar Sesion</h1>
+    <!--<p>Este es una parrafo de ejemplo</p>
+    <b>Este es un texto en negritas</b>-->
+    <!--<img src="/Users/roberto/Documents/GitHub/Shopitesz/static/img/login.png" width="50%" height="50%">-->
+    <!--<img src="../../static/img/login.png" width="50%" height="50%">-->
+    <img src="{{url_for('static',filename='img/login.png')}}">
+    <form action="/Usuarios/validarSesion" method="post">
 
          <div class="input-contenedor">
-        <i class="fas fa-key icon"></i>
-         <input type="password" name="Contraseña" maxlength="30" placeholder="Introduce tu contraseña" required>
+        <label for="correo"></label> <!-- Aplicando el estilo en linea -->
+        <input type="email" name="correo" maxlength="50" placeholder="Introduce tu email." required>
+        </div>
 
-         </div>
-         <input type="submit" value="Login" class="button">
-         <p> no tienes cuenta aun?<a class="link" href="/registrarCuenta">Registrarse</a></p>
-     </div>
+        <div class="input-contenedor">
+        <label for="password"></label>
+        <input type="password" name="password" maxlength="20"  placeholder="Introduce tu contraseña" required>
+        </div>
+
+         <p> no tienes cuenta aun?<a class="linkButton" href="/Usuarios/nuevo">Registrarse</a></p>
+         <a class="linkButton" href="/">Regresar</a>
+        <input type="submit" value="Validar">
     </form>
-
 {% endblock %}
