--- a/PruebaAplicacion/templates/usuarios/Login.html
+++ b/PruebaAplicacion/templates/usuarios/Login.html
@@ -2,26 +2,22 @@
 {% block contenido %}
     {{super()}}
    <script src="https://kit.fontawesome.com/2530d1feb2.js" crossorigin="anonymous"></script>
-   <h1>Iniciar Sesion</h1>
+
     <!--<p>Este es una parrafo de ejemplo</p>
     <b>Este es un texto en negritas</b>-->
     <!--<img src="/Users/roberto/Documents/GitHub/Shopitesz/static/img/login.png" width="50%" height="50%">-->
     <!--<img src="../../static/img/login.png" width="50%" height="50%">-->
-    <img src="{{url_for('static',filename='img/login.png')}}">
-    <form action="/Usuarios/validarSesion" method="post">
-
-         <div class="input-contenedor">
+    <div class="login-box">
+        <h1>Iniciar Sesion</h1>
+        <img class="avatar" src="{{url_for('static',filename='img/login.png')}}">
+        <form action="/Usuarios/validarSesion" method="post">
         <label for="correo"></label> <!-- Aplicando el estilo en linea -->
-        <input type="email" name="correo" maxlength="50" placeholder="Introduce tu email." required>
-        </div>
-
-        <div class="input-contenedor">
+        <input type="email" name="correo" maxlength="50" placeholder=" Introduce tu email." required>
         <label for="password"></label>
         <input type="password" name="password" maxlength="20"  placeholder="Introduce tu contraseña" required>
-        </div>
-
-         <p> no tienes cuenta aun?<a class="linkButton" href="/Usuarios/nuevo">Registrarse</a></p>
-         <a class="linkButton" href="/">Regresar</a>
-        <input type="submit" value="Validar">
-    </form>
+         <input type="submit" value="Iniciar">
+        <a class="button" href="/Usuarios/nuevo">Registrarse</a>
+        <a  class="button" href="/">Regresar</a>
+        </form>
+    </div>
 {% endblock %}
